application/meu-helm/templates/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: laravel-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - meuteste
      secretName: laravel-kubernetes-tls
  rules:
    - host: meuteste
      http:
        paths:
          - backend:
              serviceName: laravel-kubernetes-lamp
              servicePort: 80
